# AppM1

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md  build.sh  download_cifar_bin.sh  download_cifar_py.sh  download_mnist.sh  main.py  model.py  read_cifar.cpp
py/: opendata.py
saved_models/16_1024_50000/: K_Means_2_1024_192.txt  Perceptron_10_16384.txt  Perceptron_10_16384_score.txt
saved_models/16_1024_50000_vec/: Perceptron_10_16384.txt  Perceptron_10_16384_score.txt
saved_models/16_128_50000/: K_Means_2_128_192.txt  Perceptron_10_2048.txt  Perceptron_10_2048_score.txt
saved_models/16_128_50000_vec/: Perceptron_10_2048.txt  Perceptron_10_2048_score.txt
saved_models/16_2048_50000/: Perceptron_10_32768.txt
saved_models/16_2048_50000_vec/: Perceptron_10_32768.txt  Perceptron_10_32768_score.txt
src/: main.cpp  read_cifar.cpp  read_cifar.h
src/cuda/: cudautils.cu  cudautils.h  cuvec.cu  cuvec.h  test.cu  test.h
src/data/: gather_data.cpp  gather_data.h  read_cifar.h  read_mnist.h  splitImage.cpp  splitimage.h
src/data/cifar10/: read_cifar.cpp  read_cifar.h
src/data/mnist/: read_mnist.cpp  read_mnist.h
src/model/: k-means.h  k_means.cpp  k_means.h  perceptron.cpp  perceptron.h
src/utils/: data.h  images.cpp  images.h  res.cpp  res.h  string_utils.cpp  string_utils.h
